Update outdated hyperlinks and remove non-crucial paragraphs